--- a/index.html
+++ b/index.html
@@ -352,3 +352,5 @@ window.addEventListener("resize", ()=>{
   videoFrame.style.height = window.innerWidth <= 900 ? "100vh" : "90vh";
 });
 </script>
+</body>
+</html>
