--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@ img[alt="Logo"] {
   .logo{font-size:16px;}
   .logo-container img{width:35px;height:35px;}
 }
+/* ===== HOME TOP VIDEO ===== */
+.home-video-wrapper{
+  width:100%;
+  margin-top:80px; /* علشان الناف بار ثابت */
+}
+
+.home-video-wrapper iframe{
+  width:100%;
+  height:70vh; /* الطول مش مهم قوي زي ما قلت */
+  border:none;
+  display:block;
+}
 </style>
 </head>
 <body>
@@ -176,6 +188,13 @@ Enter The Arena Where Games 🎮 Anime 🌏 <br> & Marvel Collide 🔥
 </div>
 <a href="#" class="btn">See Videos</a>
 <a href="#" class="btn">Contact</a>
+</div>
+<div class="home-video-wrapper">
+  <iframe 
+    src="https://www.youtube.com/embed/lRV7RbyxXcg?autoplay=1&mute=1&controls=1&modestbranding=1&rel=0&playsinline=1"
+    allow="autoplay; encrypted-media"
+    allowfullscreen>
+  </iframe>
 </div>
 </div>
 </section>
