--- a/index.html
+++ b/index.html
@@ -275,12 +275,42 @@ tabs.forEach(tab => {
 });
 
 /* ===== VIDEO ARRAYS ===== */
-let gamingVideos = [
-  {id:'HK6r1G6wQwI', desc:'Free Fire'},
-  {id:'V6U8kK0fGHQ', desc:'Free Fire'},
-  {id:'qB_RgP1JN9k', desc:'Free Fire'},
-  {id:'41Z1uNFNbzA', desc:'Free Fire'}
-];
+let gamingCategories = {
+  "Lords Mobile": [
+    {id:'RgFDVH1HQhM', desc:'My Rally Trap 😎'},
+    {id:'GmrwxEZOLEA', desc:'My Rally Trap 😎 (P2)'},
+    {id:'F106cJpyqV0', desc:'So Many Rallies on me 💀'},
+    {id:'WvXSi5RKZLM', desc:'Showing States  of 2 pieces 💀'},
+    {id:'WBv-qD9Mg1I', desc:'لما يكون صاحبك مغرور وتعلمه درس'},
+    {id:'BQiFxZPfFTE', desc:'I got The Highest score in the Game!'},
+    {id:'iQEeQeCp0R8', desc:'Some fun'},
+    {id:'LWjzy61QmkM', desc:'testing a new trap 🔥'},
+    {id:'6VdKVBFBn4U', desc:'My Rally Trap is Back!!'}
+  ],
+
+  "Free Fire": [
+    {id:'HK6r1G6wQwI', desc:'Skateboard event !'},
+    {id:'V6U8kK0fGHQ', desc:'3 seconds 💀'},
+    {id:'qB_RgP1JN9k', desc:'New Trend !'},
+    {id:'41Z1uNFNbzA', desc:'لما تكسب صاحبك روم'}
+  ],
+
+  "Clash of Clans": [
+    // ضيف فيديوهاتك هنا
+      {id:'rqS53VXdmAM', desc:'Review My Acc In Clash Of Clans'},
+  ],
+
+  "Clash Royale": [
+    // ضيف فيديوهاتك هنا
+    {id:'SuTywOUTqn4', desc:'Review My Acc In Clash Royale'},
+    {id:'93NXZ7e2ghE', desc:'How To PLay With 2.3 Deck'},
+    {id:'6i_w1Bqt9Ds', desc:'Win Against Beatdown Decks'},
+    {id:'_L4iSKoKiPo', desc:'A Hard Win?'},
+    {id:'seaR_1ItRU0', desc:'Win Against Hogrider'},
+    {id:'B6dX2uktATk', desc:'How To PLay With 2.4 Deck'},
+    {id:'sagCqynU_ps', desc:'Reach 10,000 trophies'}
+  ]
+};
 let animeVideos = [
   {id:'9zIor5qP7b0', desc:'GOJO <BR> VS <BR> Miguel'},
   {id:'SMDKFtTVgGI', desc:'GOJO <BR> VS <BR> JOGO'}
@@ -311,7 +341,36 @@ function createVideoGrid(videos, gridId){
 }
 
 /* ===== GENERATE GRIDS ===== */
-createVideoGrid(gamingVideos,'gaming-grid');
+function createGamingSection(){
+  const grid = document.getElementById('gaming-grid');
+  grid.innerHTML = "";
+
+  Object.keys(gamingCategories).forEach(category => {
+
+    // عنوان اللعبة
+    const title = document.createElement('h3');
+    title.style.gridColumn = "1 / -1";
+    title.style.marginTop = "40px";
+    title.style.color = "#00f2ff";
+    title.innerText = category;
+    grid.appendChild(title);
+
+    // فيديوهات اللعبة
+    gamingCategories[category].forEach((v,index) => {
+      const div = document.createElement('div');
+      div.className = 'video-card';
+      div.innerHTML = `
+        <img src="https://img.youtube.com/vi/${v.id}/0.jpg">
+        <span class="desc">${v.desc}</span>
+      `;
+      div.onclick = () => openVideo(gamingCategories[category], index);
+      grid.appendChild(div);
+    });
+
+  });
+}
+
+createGamingSection();
 createVideoGrid(animeVideos,'anime-grid');
 createVideoGrid(marvelVideos,'marvel-grid');
 
