--- a/index.html
+++ b/index.html
@@ -166,6 +166,34 @@ img[alt="Logo"] {
   text-shadow:0 0 8px #00f2ff;
 }
 
+#scrollTopBtn{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#00f2ff;
+  color:#000;
+  border:none;
+  padding:10px 15px;
+  border-radius:50%;
+  font-size:18px;
+  cursor:pointer;
+  display:none;
+  box-shadow:0 0 15px #00f2ff;
+  z-index:5000;
+  transition:0.3s;
+}
+#scrollTopBtn:hover{
+  transform:scale(1.1);
+}
+
+.video-card{
+  transition:0.4s;
+}
+.video-card:hover{
+  transform:scale(1.07);
+  box-shadow:0 0 35px #00f2ff;
+}
+
 </style>
 </head>
 <body>
@@ -513,8 +541,20 @@ fetch(`https://www.googleapis.com/youtube/v3/videos?part=snippet&id=${VIDEO_ID}&
     animateCounter(document.getElementById("views-count"), parseInt(stats.viewCount));
     animateCounter(document.getElementById("videos-count"), parseInt(stats.videoCount));
   });
+  
+  const scrollBtn = document.getElementById("scrollTopBtn");
+
+window.addEventListener("scroll", ()=>{
+  scrollBtn.style.display = window.scrollY > 300 ? "block" : "none";
+});
+
+scrollBtn.addEventListener("click", ()=>{
+  window.scrollTo({top:0, behavior:"smooth"});
+});
 });
 
 </script>
+
+<button id="scrollTopBtn">⬆</button>
 </body>
 </html>
