--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@ img[alt="Logo"] {
   .menu-toggle{display:block;}
   .hero{flex-direction:column;text-align:center;}
   .video-grid{grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));}
-  .modal-content iframe{height:60vh;}
+  ..modal-content iframe {
+  width: 100%;
+  height: 100vh; /* على الموبايل */
+  border-radius: 15px;
+}
 }
 
 
@@ -204,7 +208,7 @@ img[alt="Logo"] {
 <nav>
   <div class="logo-container">
     <div class="logo">ALeGoClash YT</div>
-    <img  src="AG-logo.png" alt="Logo">
+    <img  src="AG-logo.png" alt="Logo" loading="lazy">
   </div>
   <div class="nav-right">
     <ul id="menu">
@@ -225,7 +229,7 @@ img[alt="Logo"] {
 
 <section id="home" class="active" data-aos="fade-up" data-aos-duration="1000">
 <div class="hero">
-<img src="anaspic.jpg" alt="Image" data-aos="fade-right" data-aos-duration="1000">
+<img src="anaspic.jpg" alt="Image" data-aos="fade-right" data-aos-duration="1000" loading="lazy">
 <div class="hero-text" data-aos="fade-left" data-aos-duration="1000">
 <h1>Welcome To ALeGO World</h1>
 <div class="main-tagline">
@@ -281,7 +285,7 @@ Enter The Arena Where Games 🎮 Anime 🌏 <br> & Marvel Collide 🔥
     </div>
     <div class="stat-card" style="background:#1e1e1e; padding:20px; border-radius:15px; text-align:center; box-shadow:0 0 20px #00f2ff;">
       <h3>Channel</h3>
-      <img id="channel-thumb" src="" alt="Channel Logo" style="width:60px;height:60px;border-radius:50%;margin-bottom:5px;box-shadow:0 0 15px #00f2ff;">
+      <img id="channel-thumb" src="" alt="Channel Logo" style="width:60px;height:60px;border-radius:50%;margin-bottom:5px;box-shadow:0 0 15px #00f2ff;" loading="lazy">
       <p id="channel-name">Loading...</p>
     </div>
   </div>
@@ -311,13 +315,13 @@ window.addEventListener("load", () => {
 /* ===== PARTICLES BACKGROUND ===== */
 particlesJS("particles-js", {
   "particles": {
-    "number": {"value":80},
+    "number": {"value":100},
     "color":{"value":"#00f2ff"},
-    "shape":{"type":"circle"},
+    "shape":{"type":"triangle"},
     "opacity":{"value":0.5},
-    "size":{"value":3},
+    "size":{"value":2},
     "line_linked":{"enable":true,"distance":150,"color":"#00f2ff","opacity":0.4,"width":1},
-    "move":{"enable":true,"speed":3}
+    "move":{"enable":true,"speed":2}
   }
 });
 
