--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"/>
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Ballet&display=swap" rel="stylesheet">
 
 <style>
 /* ===== PRELOADER ===== */
@@ -266,14 +266,14 @@ img[alt="Logo"] {
 
 .signature-text .small {
   font-family: 'Ballet', cursive;
-  font-size: 30px;
-  color: #FFD873; /* ذهب ناعم */
-  text-shadow: 0 0 5px #FFD873, 0 0 10px #FFD873, 0 0 15px #FFD873;
+  font-size: 20px;
+  color: #fff; /* ذهب ناعم */
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff;
 }
 
 .signature-text .big {
   font-family: 'Ballet', cursive;
-  font-size: 40px;
+  font-size: 44px;
   color: #FFD873; /* ذهب ناعم */
   text-transform: capitalize;
   letter-spacing: 1px;
